add security strategy to endpoints (#12)

--- a/src/paths/components/deleteAll.yaml
+++ b/src/paths/components/deleteAll.yaml
@@ -2,10 +2,14 @@ summary: Delete all components
 tags:
   - components
 operationId: componentsDeleteAll
+security:
+  - bearerAuth: ["COMPONENTS_WRITE"]
 responses:
   '200':
     description: Expected response to a valid request
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/components/ResponseComponentForbidden.yaml"
 
 
