--- a/src/paths/components/updateAll.yaml
+++ b/src/paths/components/updateAll.yaml
@@ -2,6 +2,8 @@ summary: Update existing components
 tags:
   - components
 operationId: componentsUpdateAll
+security:
+  - bearerAuth: ["COMPONENTS_WRITE"]
 requestBody:
   description: list of components to be updated. Each element of the list contains the new implementation of the component
   required: true
@@ -18,7 +20,9 @@ responses:
       application/json:
         schema:
           $ref: "../../schemas/components/EmbeddedComponentDto.yaml"
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/components/ResponseComponentForbidden.yaml"
   '404':
     description: Expected response to one or many non-existing components
