--- a/src/paths/components/deleteByName.yaml
+++ b/src/paths/components/deleteByName.yaml
@@ -2,12 +2,16 @@ summary: Delete a specific component with all versions
 tags:
   - components
 operationId: componentsDeleteByName
+security:
+  - bearerAuth: ["COMPONENTS_WRITE"]
 parameters:
   - $ref: "../../parameters/path/components/Name.yaml"
 responses:
   '200':
     description: Expected response to a valid request
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/components/ResponseComponentForbidden.yaml"
 
 
