--- a/src/paths/components/deleteByNameAndVersion.yaml
+++ b/src/paths/components/deleteByNameAndVersion.yaml
@@ -2,13 +2,17 @@ summary: Delete a specific version of a component
 tags:
   - components
 operationId: componentsDeleteByName
+security:
+  - bearerAuth: ["COMPONENTS_WRITE"]
 parameters:
   - $ref: "../../parameters/path/components/Name.yaml"
   - $ref: "../../parameters/path/components/Version.yaml"
 responses:
   '200':
     description: Expected response to a valid request
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/components/ResponseComponentForbidden.yaml"
   '404':
     description: Expected response to a un-existing version of a component
