--- a/src/paths/components/fetchByName.yaml
+++ b/src/paths/components/fetchByName.yaml
@@ -2,6 +2,8 @@ summary: Fetch all versions of a specific component
 tags:
   - components
 operationId: componentsFetchByName
+security:
+  - bearerAuth: ["COMPONENTS_READ"]
 parameters:
   - $ref: "../../parameters/path/components/Name.yaml"
 responses:
@@ -11,7 +13,9 @@ responses:
       application/json:
         schema:
           $ref: "../../schemas/components/EmbeddedComponentDto.yaml"
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/components/ResponseComponentForbidden.yaml"
 
 
