--- a/src/paths/connections/deleteAll.yaml
+++ b/src/paths/connections/deleteAll.yaml
@@ -2,10 +2,14 @@ summary: Delete all connections
 tags:
   - connections
 operationId: connectionsDeleteAll
+security:
+  - bearerAuth: ["CONNECTIONS_WRITE"]
 responses:
   '200':
     description: Expected response to a valid request
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/connections/ResponseConnectionForbidden.yaml"
 
 
