--- a/src/paths/connections/deleteByNameAndEnvironment.yaml
+++ b/src/paths/connections/deleteByNameAndEnvironment.yaml
@@ -2,13 +2,17 @@ summary: delete specific connection for a specific environment
 tags:
   - connections
 operationId: connectionsDeleteByNameAndEnvironment
+security:
+  - bearerAuth: ["CONNECTIONS_WRITE"]
 parameters:
   - $ref: "../../parameters/path/connections/Name.yaml"
   - $ref: "../../parameters/path/connections/Environment.yaml"
 responses:
   '200':
     description: Expected response to a valid request
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/connections/ResponseConnectionForbidden.yaml"
   '404':
     description: Expected response to a un-existing connection
