--- a/src/paths/connections/fetchAll.yaml
+++ b/src/paths/connections/fetchAll.yaml
@@ -2,6 +2,8 @@ summary: Fetch all connections
 tags:
   - connections
 operationId: connectionsFetchAll
+security:
+  - bearerAuth: ["CONNECTIONS_READ"]
 responses:
   '200':
     description: Expected response to a valid request
@@ -9,7 +11,9 @@ responses:
       application/json:
         schema:
           $ref: "../../schemas/connections/EmbeddedConnectionDto.yaml"
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/connections/ResponseConnectionForbidden.yaml"
 
 
