--- a/src/paths/connections/fetchByNameAndEnvironment.yaml
+++ b/src/paths/connections/fetchByNameAndEnvironment.yaml
@@ -2,6 +2,8 @@ summary: Info of a specific connection
 tags:
   - connections
 operationId: connectionsFetchByNameAndEnvironment
+security:
+  - bearerAuth: ["CONNECTIONS_READ"]
 parameters:
   - $ref: "../../parameters/path/connections/Name.yaml"
   - $ref: "../../parameters/path/connections/Environment.yaml"
@@ -12,7 +14,9 @@ responses:
       application/json:
         schema:
           $ref: "../../schemas/connections/ConnectionDto.yaml"
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/connections/ResponseConnectionForbidden.yaml"
   '404':
     description: Expected response to a un-existing connection
