--- a/src/paths/environments/create.yaml
+++ b/src/paths/environments/create.yaml
@@ -2,6 +2,8 @@ summary: Create a new environment
 tags:
   - environments
 operationId: environmentsCreate
+security:
+  - bearerAuth: ["ENVIRONMENTS_WRITE"]
 requestBody:
   description: The new Environment to be created
   required: true
@@ -16,7 +18,9 @@ responses:
       application/json:
         schema:
           $ref: "../../schemas/environments/EnvironmentDto.yaml"
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/environments/ResponseEnvironmentForbidden.yaml"
   '404':
     description: Expected response to an existing environment
