--- a/src/paths/environments/deleteByName.yaml
+++ b/src/paths/environments/deleteByName.yaml
@@ -2,12 +2,16 @@ summary: Delete a specific environment
 tags:
   - environments
 operationId: environmentsDeleteByName
+security:
+  - bearerAuth: ["ENVIRONMENTS_WRITE"]
 parameters:
   - $ref: "../../parameters/path/environments/Name.yaml"
 responses:
   '200':
     description: Expected response to a valid request
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/environments/ResponseEnvironmentForbidden.yaml"
   '404':
     description: Expected response to a un-existing environment
