--- a/src/paths/environments/updateAll.yaml
+++ b/src/paths/environments/updateAll.yaml
@@ -2,6 +2,8 @@ summary: Update existing environments
 tags:
   - environments
 operationId: environmentsUpdateAll
+security:
+  - bearerAuth: ["ENVIRONMENTS_WRITE"]
 requestBody:
   description: list of Environments to be updated. Each element of the list contains the new implementation of the environment
   required: true
@@ -18,7 +20,9 @@ responses:
       application/json:
         schema:
           $ref: "../../schemas/environments/EmbeddedEnvironmentDto.yaml"
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/environments/ResponseEnvironmentForbidden.yaml"
   '404':
     description: Expected response to one or many un-existing environments
