--- a/src/paths/scripts/create.yaml
+++ b/src/paths/scripts/create.yaml
@@ -2,6 +2,8 @@ summary: Create a new script
 tags:
   - scripts
 operationId: scriptsCreate
+security:
+  - bearerAuth: ["SCRIPT_WRITE"]
 requestBody:
   description: The new Script to be created
   required: true
@@ -16,5 +18,7 @@ responses:
       application/json:
         schema:
           $ref: "../../schemas/scripts/PagedScriptDto.yaml"
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/scripts/ResponseScriptForbidden.yaml"
