--- a/src/paths/scripts/deleteByNameAndVersion.yaml
+++ b/src/paths/scripts/deleteByNameAndVersion.yaml
@@ -2,6 +2,8 @@ summary: Delete a specific script
 tags:
   - scripts
 operationId: scriptsDeleteByNameAndVersion
+security:
+  - bearerAuth: ["SCRIPT_WRITE"]
 parameters:
   - $ref: "../../parameters/path/scripts/Name.yaml"
   - $ref: "../../parameters/path/scripts/Version.yaml"
@@ -16,7 +18,9 @@ responses:
             status:
               type: string
               enum: [ok]
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/scripts/ResponseScriptForbidden.yaml"
   '404':
     description: Expected response to a unexisting resource
