--- a/src/paths/scripts/updateAll.yaml
+++ b/src/paths/scripts/updateAll.yaml
@@ -2,6 +2,8 @@ summary: Update one or multiple scripts
 tags:
   - scripts
 operationId: scriptsUpdate
+security:
+  - bearerAuth: ["SCRIPT_WRITE"]
 requestBody:
   description: list of Scripts to be updated. Each element of the list contains the new implementation of the Script
   required: true
@@ -18,5 +20,7 @@ responses:
       application/json:
         schema:
           $ref: "../../schemas/scripts/ScriptDto.yaml"
-  '403':
+  "401":
+    $ref: "../../responses/TokenResponse.yaml"
+  "403":
     $ref: "../../responses/scripts/ResponseScriptForbidden.yaml"
