--- a/src/paths/environments/create.yaml
+++ b/src/paths/environments/create.yaml
@@ -33,6 +33,6 @@ responses:
           status: 404
           error: "Not Found"
           message: "environment TUTORIAL already exists"
-          path: "/api/environmentss/"
+          path: "/api/environments/"
 
 
