--- a/src/responses/_index.yaml
+++ b/src/responses/_index.yaml
@@ -23,3 +23,7 @@ ResponseExecutionRequestForbidden:
 # Script execution
 ResponseScriptExecutionForbidden:
   $ref: "./scriptExecutions/ResponseScriptExecutionForbidden.yaml"
+
+# OpenApi
+ResponseOpenApiForbidden:
+  $ref: "./openapi/ResponseOpenApiForbidden.yaml"
