--- a/src/schemas/_index.yaml
+++ b/src/schemas/_index.yaml
@@ -77,6 +77,9 @@ OutputDto:
 ## ScriptLabelDto already exists in Script Schema
 ## ExecutionRequestLabelDto already exists in Execution Requests schema
 
+# Open API
+OpenAPIDto:
+  $ref: "./openapi/OpenAPIDto.yaml"
 
 # Pagination
 Link:
