--- a/src/schemas/_index.yaml
+++ b/src/schemas/_index.yaml
@@ -34,6 +34,12 @@ ConnectionParameterDto:
 EmbeddedConnectionDto:
   $ref: "./connections/EmbeddedConnectionDto.yaml"
 
+# Component Types
+componentTypeDto:
+  $ref: "./componentTypes/ComponentTypeDto.yaml"
+componentTypeParameterDto:
+  $ref: "./componentTypes/ComponentTypeParameterDto.yaml"
+
 # Environments
 EnvironmentDto:
   $ref: "./environments/EnvironmentDto.yaml"
