--- a/src/schemas/connections/ConnectionDto.yaml
+++ b/src/schemas/connections/ConnectionDto.yaml
@@ -6,10 +6,8 @@ properties:
     type: string
   description:
     type: string
-  environment:
-    type: string
-  parameters:
+  environments:
     type: array
     items:
-      $ref: "./ConnectionParameterDto.yaml"
+      $ref: "./ConnectionEnvironmentDto.yaml"
 
