--- a/src/paths/security_groups/deleteTeam.yaml
+++ b/src/paths/security_groups/deleteTeam.yaml
@@ -1,18 +1,12 @@
 summary: delete a team from a security group
 tags:
   - security_groups
-operationId: securityGroupsAddTeam
+operationId: securityGroupsDeleteTeam
 security:
   - bearerAuth: ["GROUPS_WRITE"]
 parameters:
   - $ref: "../../parameters/path/security_groups/Uuid.yaml"
   - $ref: "../../parameters/path/security_groups/TeamUuid.yaml"
-requestBody:
-  content:
-    application/json:
-      schema:
-        $ref: '../../schemas/security_groups/SecurityGroupTeamPutDto.yaml'
-  required: true
 responses:
   '200':
     description: Expected response to a valid request
