add show inactive qurey parameter and restore endpoint

--- a/src/parameters/_index.yaml
+++ b/src/parameters/_index.yaml
@@ -19,6 +19,9 @@ QueryScriptsLabel:
 QueryScriptsSort:
   $ref: './query/scripts/Sort.yaml'
 
+QueryScriptsShowInactive:
+  $ref: './query/scripts/ShowInactive.yaml'
+
 # Components
 ## Path
 PathComponentName:
