Update ScriptVersionDto for Soft Deletion (#20)

--- a/src/parameters/_index.yaml
+++ b/src/parameters/_index.yaml
@@ -19,6 +19,9 @@ QueryScriptsLabel:
 QueryScriptsSort:
   $ref: './query/scripts/Sort.yaml'
 
+QueryScriptIncludeInActive:
+  $ref: './query/scripts/IncludeInactive.yaml'
+
 # Components
 ## Path
 PathComponentName:
