--- a/iesi.yaml
+++ b/iesi.yaml
@@ -47,6 +47,7 @@ paths:
         - $ref: '#/components/parameters/Page'
         - $ref: '#/components/parameters/Size'
         - $ref: '#/components/parameters/Sort'
+        - $ref: '#/components/parameters/IncludeInactive'
       responses:
         '200':
           description: Expected response to a valid request
