--- a/src/paths/executionRequests/fetchAll.yaml
+++ b/src/paths/executionRequests/fetchAll.yaml
@@ -9,6 +9,7 @@ parameters:
   - $ref: "../../parameters/query/executionRequests/Version.yaml"
   - $ref: "../../parameters/query/executionRequests/Label.yaml"
   - $ref: "../../parameters/query/executionRequests/Environment.yaml"
+  - $ref: "../../parameters/query/executionRequests/RunId.yaml"
 responses:
   '200':
     description: Expected response to a valid request
