correct user create endpoint and add user to role request body

--- a/src/paths/_index.yaml
+++ b/src/paths/_index.yaml
@@ -139,6 +139,7 @@
 '/users':
   get:
     $ref: "./users/fetchAll.yaml"
+'/users/create':
   post:
     $ref: "./users/create.yaml"
 '/users/login':
