New Param Status added in execution request

--- a/src/paths/executionRequests/fetchAll.yaml
+++ b/src/paths/executionRequests/fetchAll.yaml
@@ -10,6 +10,7 @@ parameters:
   - $ref: "../../parameters/query/executionRequests/Label.yaml"
   - $ref: "../../parameters/query/executionRequests/Environment.yaml"
   - $ref: "../../parameters/query/executionRequests/RunId.yaml"
+  - $ref: "../../parameters/query/executionRequests/Status.yaml"
 responses:
   '200':
     description: Expected response to a valid request
