--- a/src/parameters/_index.yaml
+++ b/src/parameters/_index.yaml
@@ -55,6 +55,8 @@ QueryExecutionRequestVersion:
   $ref: "./query/executionRequests/Version.yaml"
 QueryExecutionRequestRunId:
   $ref: "./query/executionRequests/RunId.yaml"
+QueryExecutionRequestStatus:
+  $ref: "./query/executionRequests/Status.yaml"
 
 # Script Executions
 PathScriptExecutionProcessId:
