--- a/src/parameters/query/executionRequests/Status.yaml
+++ b/src/parameters/query/executionRequests/Status.yaml
@@ -1,5 +1,6 @@
 in: query
-name: status
+name: run-status
 required: false
 schema:
   type: string
+  enum: [RUNNING, SUCCESS, WARNING, ERROR, STOPPED, SKIPPED]
