--- a/src/schemas/datasets/InMemoryDatasetImplementationDto.yaml
+++ b/src/schemas/datasets/InMemoryDatasetImplementationDto.yaml
@@ -6,7 +6,8 @@ properties:
   type:
     type: string
     enum:
-      - in_memory
+      - database
+      - in-memory
   keyValues:
     type: array
     items:
