add user roles to authentication response

--- a/src/schemas/users/AuthenticationResponseDto.yaml
+++ b/src/schemas/users/AuthenticationResponseDto.yaml
@@ -4,3 +4,7 @@ properties:
     type: string
   expiresIn:
     type: integer
+  roles:
+    type: array
+    items:
+      $ref: '../../schemas/users/UserRoleDto.yaml'
