--- a/src/schemas/connections/ConnectionDto.yaml
+++ b/src/schemas/connections/ConnectionDto.yaml
@@ -2,6 +2,8 @@ type: object
 properties:
   name:
     type: string
+  securityGroupName:
+    type: string
   type:
     type: string
   description:
