added json body

--- a/src/paths/encrypt/encryptPassword.yaml
+++ b/src/paths/encrypt/encryptPassword.yaml
@@ -6,7 +6,7 @@ requestBody:
   content:
     application/json:
       schema:
-        $ref: '../../schemas/encryption/encryption.yaml'
+        $ref: "../../schemas/encryption/EncryptionPostDto.yaml"
   required: true
 responses:
   '200':
@@ -14,10 +14,7 @@ responses:
     content:
       application/json:
         schema:
-          type: object
-          properties:
-            encryptedPassword:
-              type: string
+          $ref: "../../schemas/encryption/EncryptionDto.yaml"
   "401":
     $ref: "../../responses/TokenResponse.yaml"
   "403":
