Latest version of the API
* Allow filtering on script execution status for execution requests  (#25)

* Encryption endpoint added

* build fix

* added error response

* added json body

* build fix

* URL refracted

* Allow users to manage datasets through the UI

* Add user roles to authentication response

* Update dataset implementation payloads

Co-authored-by: Suyash Jain <81413098+Suyash-d@users.noreply.github.com>
Co-authored-by: suyash.d.jain <suyash.d.jain@accenture.com>
Co-authored-by: Robbe Berrevoets <robbe.berrevoets@accenture.com>

--- a/src/parameters/_index.yaml
+++ b/src/parameters/_index.yaml
@@ -55,6 +55,8 @@ QueryExecutionRequestVersion:
   $ref: "./query/executionRequests/Version.yaml"
 QueryExecutionRequestRunId:
   $ref: "./query/executionRequests/RunId.yaml"
+QueryScriptExecutionStatus:
+  $ref: "./query/executionRequests/Status.yaml"
 
 # Script Executions
 PathScriptExecutionProcessId:
@@ -71,8 +73,8 @@ QueryPaginationSize:
 
 # Datasets
 ## Path
-PathDatasetsUuid:
-  $ref: './path/datasets/Uuid.yaml'
+PathDatasetsName:
+  $ref: './path/datasets/name.yaml'
 
 ## Query
 QueryDatasetsUuid:
